@@ -1,7 +1,7 @@
 package com.vti.group1.shopapi.controller;
 
-import com.vti.group1.shopapi.entity.Item;
-import com.vti.group1.shopapi.repository.ItemRepository;
+import com.vti.group1.shopapi.entity.Product;
+import com.vti.group1.shopapi.repository.ProductRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -9,18 +9,18 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
 import java.util.List;
 
 @RestController
-@RequestMapping("/api/v1/items")
+@RequestMapping("/api/v1/products")
 @RequiredArgsConstructor
 @Transactional
-public class ItemController {
-    private final ItemRepository itemRepository;
+public class ProductController {
+    private final ProductRepository productRepository;
+
     @GetMapping()
-    public ResponseEntity<List<Item>> getAllItems() {
-        List<Item> items = itemRepository.findAll();
-        return ResponseEntity.ok(items.isEmpty() ? Collections.emptyList() : items);
+    public ResponseEntity<List<Product>> getAllProducts() {
+        List<Product> products = productRepository.findAll();
+        return ResponseEntity.ok(products.isEmpty() ? List.of() : products);
     }
 }
